@@ -3,10 +3,17 @@
       - fix #6076: crash on pla a new score after exiting a playing score
       - refuse to open incompatible score files (file version number > current
         versione number); this adds new translatable strings
+        (la)
+      - fix #6163: Export MIDI in wrong preference tab
+22.jun (la)
+      - fix #6195 : breve rest & longa rest are inversed
+      - Add Hebrew and Slovenian translation files
 21.jun (ws)
       - fix dragging from palette of measure repeat symbol
 20.jun (db)
       - remove incompatible "temperament tuning" plugin
+      (la)
+      - fix #6172 : note properties does not keep notehead group
 18.jun (la)
       - fix #5949 : MIDI import gives unexpectedly silent notes
       - fix #6144 : Notes (and other signs) in small staves are smaller than they should
